--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A better ice-breaker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-local": "nodemon ./index.js localhost"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/benwolz/whomst/issues"
   },
-  "homepage": "https://github.com/benwolz/whomst#readme"
+  "homepage": "https://github.com/benwolz/whomst#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.9.0",
+    "nodemon": "^2.0.4"
+  }
 }
