--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-local": "nodemon ./index.js localhost"
+    "start": "nodemon ./src/index.js localhost"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,13 @@
   },
   "homepage": "https://github.com/benwolz/whomst#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "html": "^1.0.0",
+    "http": "0.0.1-security",
+    "mongodb": "^3.6.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
