--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/benwolz/whomst#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "html": "^1.0.0",
     "http": "0.0.1-security",
     "mongodb": "^3.6.2",
-    "path": "^0.12.7"
+    "mongoose": "^5.10.6",
+    "path": "^0.12.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
