--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "html": "^1.0.0",
     "http": "0.0.1-security",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "path": "^0.12.7",
