--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "emoji-dictionary": "^1.0.11",
+    "emoji-name-map": "^1.2.9",
+    "emoji-stream": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "html": "^1.0.0",
     "http": "0.0.1-security",
     "lodash": "^4.17.20",
